[gd_scene load_steps=5 format=3 uid="uid://dsaj5k71mnup0"]

[ext_resource type="Script" path="res://UI/DebugInfo/DebugInfo.gd" id="1"]
[ext_resource type="Script" path="res://UI/DebugInfo/FPSDisplay.gd" id="3"]
[ext_resource type="Script" path="res://UI/DebugInfo/ThreadPoolDisplay.gd" id="4"]

[sub_resource type="Theme" id="1"]

[node name="DebugInfo" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="DebugPanel" type="Panel" parent="."]
offset_right = 883.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")

[node name="DebugText" type="RichTextLabel" parent="DebugPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 887.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Settings" type="PanelContainer" parent="ScrollContainer"]
offset_right = 265.0
offset_bottom = 270.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Settings"]
offset_right = 265.0
offset_bottom = 270.0

[node name="Info" type="VBoxContainer" parent="ScrollContainer/Settings/VBoxContainer"]
offset_right = 265.0
offset_bottom = 146.0

[node name="ThreadPoolDisplay" type="HBoxContainer" parent="ScrollContainer/Settings/VBoxContainer/Info"]
offset_right = 265.0
offset_bottom = 26.0
script = ExtResource("4")

[node name="Name" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/ThreadPoolDisplay"]
offset_right = 153.0
offset_bottom = 26.0
text = "Thread queue sizes:"

[node name="Data" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/ThreadPoolDisplay"]
offset_left = 157.0
offset_top = 1.0
offset_right = 158.0
offset_bottom = 24.0

[node name="FPSDisplay" type="HBoxContainer" parent="ScrollContainer/Settings/VBoxContainer/Info"]
offset_top = 30.0
offset_right = 265.0
offset_bottom = 56.0
script = ExtResource("3")

[node name="Name" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/FPSDisplay"]
offset_right = 36.0
offset_bottom = 26.0
text = "FPS: "

[node name="Data" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/FPSDisplay"]
offset_left = 40.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 24.0

[node name="PositionDisplay" type="HBoxContainer" parent="ScrollContainer/Settings/VBoxContainer/Info"]
offset_top = 60.0
offset_right = 265.0
offset_bottom = 112.0

[node name="Name" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/PositionDisplay"]
offset_right = 124.0
offset_bottom = 52.0
text = "Engine-Position:
Geo-Position:"

[node name="Data" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/PositionDisplay"]
offset_left = 128.0
offset_top = 14.0
offset_right = 129.0
offset_bottom = 37.0

[node name="LogLevelInfo" type="HBoxContainer" parent="ScrollContainer/Settings/VBoxContainer/Info"]
offset_top = 116.0
offset_right = 265.0
offset_bottom = 142.0
mouse_filter = 0

[node name="Label" type="Label" parent="ScrollContainer/Settings/VBoxContainer/Info/LogLevelInfo"]
offset_right = 72.0
offset_bottom = 26.0
text = "Log level:"

[node name="LogLevelSlider" type="HSlider" parent="ScrollContainer/Settings/VBoxContainer/Info/LogLevelInfo"]
offset_left = 76.0
offset_right = 265.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
ticks_on_borders = true

[node name="Spacer" type="MarginContainer" parent="ScrollContainer/Settings/VBoxContainer/Info"]
offset_top = 146.0
offset_right = 265.0
offset_bottom = 146.0

[node name="VisualHeading" type="Label" parent="ScrollContainer/Settings/VBoxContainer"]
offset_top = 150.0
offset_right = 265.0
offset_bottom = 176.0
text = "Visual Debug Settings::"
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/Settings/VBoxContainer"]
offset_top = 180.0
offset_right = 265.0
offset_bottom = 206.0

[node name="Wireframes" type="HBoxContainer" parent="ScrollContainer/Settings/VBoxContainer/MarginContainer2"]
offset_right = 265.0
offset_bottom = 26.0

[node name="Label" type="Label" parent="ScrollContainer/Settings/VBoxContainer/MarginContainer2/Wireframes"]
offset_right = 157.0
offset_bottom = 26.0
text = "Render wireframes: "

[node name="WireframeButton" type="CheckButton" parent="ScrollContainer/Settings/VBoxContainer/MarginContainer2/Wireframes"]
offset_left = 161.0
offset_right = 205.0
offset_bottom = 26.0

[node name="GameplayHeading" type="Label" parent="ScrollContainer/Settings/VBoxContainer"]
offset_top = 210.0
offset_right = 265.0
offset_bottom = 236.0
text = "Gameplay settings:"
uppercase = true

[node name="Spacer3" type="MarginContainer" parent="ScrollContainer/Settings/VBoxContainer"]
offset_top = 240.0
offset_right = 265.0
offset_bottom = 240.0

[node name="TileHeading" type="Label" parent="ScrollContainer/Settings/VBoxContainer"]
offset_top = 244.0
offset_right = 265.0
offset_bottom = 270.0
text = "Tile settings:"
uppercase = true
